terraform/k8s/1-prometheus.yml
apiVersion: apps/v1
#apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  replicas: 1
#added selector below
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      name: prometheus
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: myselfaa/prom_sloburn
#        image: rakeshgowdaraka/prometheus
#        image: prom/prometheus
#        image: gcr.io/cre-prometheus-slo-alerting/prometheus:latest
        imagePullPolicy: Always
        ports:
        - name: webui
          containerPort: 9090
        volumeMounts:
        - mountPath: "/prometheus"
          name: prometheus-storage-volume
#          name: pd
      securityContext:
        fsGroup: 65534
      volumes:
      - name: prometheus-storage-volume
#      - name: pd
        persistentVolumeClaim:
          claimName: pv-claim-prom
#          claimName: prometheus-disk
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: LoadBalancer
#  type: NodePort
  ports:
    - port: 9090
      protocol: TCP
      name: webui
  selector:
    app: prometheus
