terraform/k8s/4-cloudprober.yml
apiVersion: apps/v1
#apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: monitoring
  name: cloudprober
  labels:
    app: cloudprober
spec:
  replicas: 1
#added selector below
  selector:
    matchLabels:
      app: cloudprober
  template:
    metadata:
      labels:
        app: cloudprober
    spec:
      containers:
      - name: cloudprober
        image: rakeshgowdaraka/cloudprober:latest
#        image: cloudprober/cloudprober
#        image: gcr.io/cre-prometheus-slo-alerting/cloudprober:latest
        ports:
        - name: appport
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /metrics
            port: appport
        readinessProbe:
          httpGet:
            path: /metrics
            port: appport
---
apiVersion: v1
kind: Service
metadata:
  name: cloudprober
  namespace: monitoring
  labels:
    app: cloudprober
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: LoadBalancer
#  type: NodePort
  selector:
    app: cloudprober
  ports:
  - port: 8080
    targetPort: 8080
