terraform/k8s/2-server.yml
apiVersion: apps/v1
#apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: server
  namespace: monitoring
  labels:
    app: server
spec:
  replicas: 10
#added selector here
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: gcr.io/cre-prometheus-slo-alerting/example-server:latest
        ports:
        - name: appport
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: appport
        readinessProbe:
          httpGet:
            path: /healthz
            port: appport
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: monitoring
  labels:
    app: server
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: LoadBalancer
#  type: NodePort
  selector:
    app: server
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: monitoring
  name: server
  annotations:
    spec.ingressClassName: "gce"
#    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: server-ip
  labels:
    app: server
spec:
#  backend:
#    serviceName: server
#    servicePort: 8080
#added following for spec as given on k8s website
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 8080
